Bootstrap updated and some js helpers added

--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -13,15 +13,15 @@ block mainContent
 	- imageAttributes = {"src": "img/v8.png", "alt": "Alternative description", 'class': 'v8-image'};
 	-
 		listItems  = [
-		'- HTML - processing using Pug.js',
-		'- Sass - Bootstrap 4 grid-generator, a set of useful mixins out of the box',
-		'- Javascript ES6 Modules - processing using Webpack 4',
-		'- Without jQuery - instead in this template included small helper-class - Assistant',
-		'- <a href="https://github.com/greensock/GSAP" target="_blank">GSAP</a> - is a JavaScript library for building high-performance animations that work in every major browser.',
-		'- SVG-sprites', ];
+			'- HTML - processing using Pug.js',
+			'- Sass - Bootstrap 4 grid-generator, a set of useful mixins out of the box',
+			'- Javascript ES6 Modules - processing using Webpack 4',
+			'- Without jQuery - instead in this template included small helper-class - Assistant',
+			'- <a href="https://github.com/greensock/GSAP" target="_blank">GSAP</a> - is a JavaScript library for building high-performance animations that work in every major browser.',
+			'- SVG-sprites',
+		];
 
-
-	.container
+	.container.pt-5
 		.row.align-items-center
 			.col-8.d-flex
 				.row.align-items-center
