--- a/src/html/components/header.pug
+++ b/src/html/components/header.pug
@@ -5,6 +5,6 @@ header.header
 				h2.text-center Header
 			.col-auto
 				nav
-					a(href="#") Some link #1
-					a(href="#") Some link #2
-					a(href="#") Some link #3
+					a(href="#").d-inline-block Some link #1
+					a(href="#").d-inline-block Some link #2
+					a(href="#").d-inline-block Some link #3
