--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -1,4 +1,3 @@
-
 extends ../layout/main
 
 block mainVariables
@@ -13,23 +12,29 @@ block mainContent
 			'- HTML - processing using Pug.js',
 			'- Sass - Bootstrap 4 grid-generator, a set of useful mixins out of the box',
 			'- Javascript ES6 Modules - processing using Webpack 4',
-			'- Without jQuery - instead in this template included small helper-class - Assistant',
-			'- <a href="https://github.com/greensock/GSAP" target="_blank">GSAP</a> - is a JavaScript library for building high-performance animations that work in every major browser.',
+			'- Without jQuery - instead in this template included set of helpers-functions written on vanilla javascript',
 			'- SVG-sprites',
 		];
 
 	.container.pt-5
 		.row.align-items-center
-			.col-8.d-flex
-				.row.align-items-center
-					.col-4
-						a(href='https://github.com/ToTibis' target='_blank', class='github-link')
-							+icon('github')
-					.col-8
-						section
-							h1 In this boilerplate you can use:
-							ul(class=listClass)
-								each item, index in listItems
-									li(class=[index === 0 ? 'active' : '']) !{item}
-			.col-3.ml-auto
+			.col-md-4.col-xl-3
+				a(href='https://github.com/ToTibis' target='_blank', class='github-link').mx-auto
+					+icon('github')
+			.col-md-8.col-xl-6
+				section(class='section')
+					h1 In this boilerplate you can use:
+					ul(class=listClass)
+						each item, index in listItems
+							li(class=[index === 0 ? 'active active2' : ''] data-index=index)
+								span.d-block !{item}
+				.row.mt-4
+					.col-md-auto.mb-3.mb-md-0
+						button(type='button' class=['button'] data-modal-open='example-static-first') First modal
+					.col-md-auto.mb-3.mb-md-0
+						button(type='button' class=['button'] data-modal-open='example-static-second') Second modal
+					.col-md-auto.mb-3.mb-md-0
+						button(type='button' class=['button'])#section-toggle Section slide toggle
+
+			.col-3.d-none.d-xl-block
 				img&attributes(imageAttributes)
