--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -2,25 +2,29 @@ block mainVariables
 
 doctype html
 html(lang='ru')
-    head
-        meta(charset='UTF-8')
-        meta(http-equiv='x-ua-compatible' content="ie=edge")
-        meta(name="viewport" content="width=device-width, initial-scale=1")
-        meta(name="description" content="Description of the page less than 150 characters")
-        title #{pageTitle}
-        link(rel="stylesheet" href="css/libs.css")
-        link(rel="stylesheet" href="css/common.css")
-    body
+	head
+		meta(charset='UTF-8')
+		meta(http-equiv='x-ua-compatible' content="ie=edge")
+		meta(name="viewport" content="width=device-width, initial-scale=1")
+		meta(name="description" content="Description of the page less than 150 characters")
+		title #{pageTitle}
+		link(rel="stylesheet" href="css/libs.css")
+		link(rel="stylesheet" href="css/common.css")
+	body
 
-        include ../mixins/icon
-        include ../mixins/breadcrumbs
+		include ../mixins/icon
+		include ../mixins/breadcrumbs
 
-    .presentation-wrapper
-        .page-wrapper
-            .page-content
-                include ../components/header
-                main#main
-                    block mainContent
-            include ../components/footer
-    script(src='js/vendors.js')
-    script(src='js/main.js')
+	.presentation-wrapper#wrapper(style='height: auto; width: auto;')
+		.page-wrapper
+			.page-content
+				include ../components/header
+				main#main
+					block mainContent
+			include ../components/footer
+	include ../components/example/modal-static-first
+	include ../components/example/modal-static-second
+	include ../components/example/modal-static-thid
+	script(src='js/iePolyfills.js')
+	script(src='js/vendors.js')
+	script(src='js/main.js')
