webpack update to version 5

--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -71,6 +71,8 @@ img {
 	}
 }
 
+/*Custom styles start*/
+
 .page__modal {
 	&.small {
 		.page__modal-container {
@@ -179,6 +181,7 @@ img {
 	}
 }
 
+/*Custom styles end*/
 
 
 
