modal events emit

--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -30,11 +30,14 @@ block mainContent
 								span.d-block !{item}
 				.row.mt-4
 					.col-md-auto.mb-3.mb-md-0
-						button(type='button' class=['button'] data-modal-open='example-static-first') First modal
+						button(type='button' class=['button'] data-modal-open='example-static-first')
+							span.d-block First modal
 					.col-md-auto.mb-3.mb-md-0
-						button(type='button' class=['button'] data-modal-open='example-static-second') Second modal
+						button(type='button' class=['button'] data-modal-open='example-static-second')
+							span.d-block Second modal
 					.col-md-auto.mb-3.mb-md-0
-						button(type='button' class=['button'])#section-toggle Section slide toggle
+						button(type='button' class=['button'])#section-toggle
+							span.d-block Section slide toggle
 
 			.col-3.d-none.d-xl-block
 				img&attributes(imageAttributes)
