debounce event added

--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -40,4 +40,5 @@ block mainContent
 							span.d-block Section slide toggle
 
 			.col-3.d-none.d-xl-block
-				img&attributes(imageAttributes)
+				span.image-holder(data-parallax-deep='100').parallax-layer
+					img&attributes(imageAttributes)
