--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -15,7 +15,8 @@ html(lang='ru')
 		include ../mixins/icon
 		include ../mixins/breadcrumbs
 
-	.presentation-wrapper#wrapper(style='height: auto; width: auto;')
+	.presentation-wrapper#wrapper.parallax
+		.presentation-wrapper-background(data-parallax-deep='2500').parallax-layer
 		.page-wrapper
 			.page-content
 				include ../components/header
