modal close on esc and slideToggle target fix

--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -17,8 +17,8 @@ html(lang='ru')
 
 	.presentation-wrapper#wrapper.parallax
 		.presentation-wrapper-background(data-parallax-deep='2500').parallax-layer
-		.page-wrapper
-			.page-content
+		.page__wrapper
+			.page__content
 				include ../components/header
 				main#main
 					block mainContent
