--- a/src/html/pages/index.pug
+++ b/src/html/pages/index.pug
@@ -9,11 +9,11 @@ block mainContent
 	- imageAttributes = {"src": "img/v8.png", "alt": "Alternative description", 'class': 'v8-image'};
 	-
 		listItems  = [
-			'- HTML - processing using Pug.js',
-			'- Sass - Bootstrap 4 grid-generator, a set of useful mixins out of the box',
-			'- Javascript ES6 Modules - processing using Webpack 4',
-			'- Without jQuery - instead in this template included set of helpers-functions written on vanilla javascript',
-			'- SVG-sprites',
+			'- HTML - processing using Pug.js;',
+			'- Sass - Bootstrap 4 - used just grid and reboot. Also used set of utilities - text, spacing, display, flex;',
+			'- Javascript ES6 Modules - processing using Webpack 5;',
+			'- Without jQuery - instead in this template included set of helpers-functions written on vanilla javascript;',
+			'- SVG-sprites.'
 		];
 
 	.container.pt-5
