--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -58,7 +58,7 @@ img {
 /* Global styles end*/
 
 .page {
-	&-wrapper {
+	&__wrapper {
 		display: flex;
 		flex-direction: column;
 		min-height: 100%;
@@ -67,7 +67,7 @@ img {
 			flex: 0 0 auto;
 		}
 	}
-	&-content {
+	&__content {
 		flex: 1 0 auto;
 	}
 }
@@ -105,10 +105,10 @@ img {
 		}
 	}
 	.page {
-		&-wrapper {
+		&__wrapper {
 			min-height: 100vh;
 		}
-		&-content {
+		&__content {
 			display: flex;
 			flex-direction: column;
 		}
