--- a/src/sass/utilites/_variables.scss
+++ b/src/sass/utilites/_variables.scss
@@ -7,6 +7,7 @@ $colors: (
 		success:  #A4DE2F,
 		warning:  #EE8732,
 		info: 		#4b8bf5,
+		danger:   #ff4444,
 
 		white: 		#ffffff,
 		black: 		#000000
