--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -6,54 +6,54 @@
 
 /* Global styles start*/
 * {
-  outline: none;
+	outline: none;
 }
 html,
 body {
-  height: 100%;
+	height: 100%;
 }
 ul, ol, li {
-  margin: 0;
-  padding: 0;
-  list-style: none;
+	margin: 0;
+	padding: 0;
+	list-style: none;
 }
 button {
-  border: none;
-  padding: 0;
-  margin: 0;
-  background-color: transparent;
-  cursor: pointer;
-  &[type="button"], &[type="submit"] {
-    &:focus {
-      outline: none;
-    }
-  }
+	border: none;
+	padding: 0;
+	margin: 0;
+	background-color: transparent;
+	cursor: pointer;
+	&[type="button"], &[type="submit"] {
+		&:focus {
+			outline: none;
+		}
+	}
 }
 a {
-  color: inherit;
+	color: inherit;
 }
 input[type='number'] {
-  -moz-appearance: textfield;
-  &::-webkit-outer-spin-button,
-  &::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    margin: 0;
-  }
+	-moz-appearance: textfield;
+	&::-webkit-outer-spin-button,
+	&::-webkit-inner-spin-button {
+		-webkit-appearance: none;
+		margin: 0;
+	}
 }
 input, textarea {
-  &:focus {
-    outline: none;
-  }
+	&:focus {
+		outline: none;
+	}
 }
 svg {
-  max-width: 100%;
-  max-height: 100%;
-  stroke-width: 0;
-  fill: currentColor;
+	max-width: 100%;
+	max-height: 100%;
+	stroke-width: 0;
+	fill: currentColor;
 	pointer-events: none;
 }
 img {
-  max-width: 100%;
+	max-width: 100%;
 }
 /* Global styles end*/
 
@@ -161,7 +161,7 @@ img {
 	}
 	.github-link {
 		@include transition;
-		@include animation('5s linear infinite jump');
+		animation: 5s linear infinite jump;
 		display: block;
 		color: get($colors, info);
 		@include mediaToUp($lg) {
@@ -177,15 +177,29 @@ img {
 		}
 	}
 	.button {
+		@include transition;
 		padding: $spacer;
 		display: block;
 		color: inherit;
 		border: $border-width solid get($colors, white);
 		border-radius: $spacer;
 		width: 100%;
+		@include interaction('mouse') {
+			&:hover {
+				background-color: white;
+				color: black;
+			}
+		}
+
+		@include interaction('touch') {
+			&:active {
+				background-color: white;
+				color: black;
+			}
+		}
 	}
 }
-@include keyframes(jump) {
+@keyframes jump {
 	0% {
 		transform: translateY(0);
 	}
@@ -203,10 +217,18 @@ img {
 	}
 }
 
+
+
 /*Custom styles end*/
 
-
 .debug-container {
+	.debug-close {
+		@include interaction('mouse') {
+			&:hover {
+				color: get($colors, danger);
+			}
+		}
+	}
 	&:after {
 		@include pseudo;
 		width: $spacer * 2;
