--- a/src/html/components/header.pug
+++ b/src/html/components/header.pug
@@ -1,10 +1,27 @@
-header.header
+header(class=['header', 'js-header']).py-3
+
+	-
+		nav = [
+			{
+				name: 'Home',
+				href: 'home.html'
+			},
+			{
+				name: 'Ui kit',
+				href: 'ui.html'
+			},
+			{
+				name: 'Pages',
+				href: 'index.html'
+			}
+		]
+
 	.container
 		.row.justify-content-between.align-items-center
 			.col-auto
-				h2.text-center Header
+				h2
+					a(href='index.html').d-inline-block Logo
 			.col-auto
-				nav
-					a(href="#").d-inline-block Some link #1
-					a(href="#").d-inline-block Some link #2
-					a(href="#").d-inline-block Some link #3
+				button(type='button' data-bs-toggle='offcanvas' data-bs-target="#js-offcanvas-menu")
+					+icon('menu', '', '30px', '30px')
+
