--- a/src/sass/common.scss
+++ b/src/sass/common.scss
@@ -1,241 +1,18 @@
-@import 'utilites/rem';
-@import 'utilites/variables';
-@import 'utilites/media-queries';
-@import 'utilites/mixins';
-@import 'node_modules/bootstrap/scss/vendor/rfs';
+@import 'base/root';
+@import 'base/reboot';
 
-/* Global styles start*/
-* {
-	outline: none;
-}
-html,
-body {
-	height: 100%;
-}
-ul, ol, li {
-	margin: 0;
-	padding: 0;
-	list-style: none;
-}
-button {
-	border: none;
-	padding: 0;
-	margin: 0;
-	background-color: transparent;
-	cursor: pointer;
-	&[type="button"], &[type="submit"] {
-		&:focus {
-			outline: none;
-		}
-	}
-}
-a {
-	color: inherit;
-}
-input[type='number'] {
-	-moz-appearance: textfield;
-	&::-webkit-outer-spin-button,
-	&::-webkit-inner-spin-button {
-		-webkit-appearance: none;
-		margin: 0;
-	}
-}
-input, textarea {
-	&:focus {
-		outline: none;
-	}
-}
-svg {
-	max-width: 100%;
-	max-height: 100%;
-	stroke-width: 0;
-	fill: currentColor;
-	pointer-events: none;
-}
-img {
-	max-width: 100%;
-}
-/* Global styles end*/
+@import 'components/typography';
+@import 'components/header';
+@import 'components/footer';
+@import 'components/form/group';
+@import 'components/form/field';
+@import 'components/form/radio-and-checkbox';
+@import 'components/form/validation';
+@import 'components/lazy';
+@import 'components/modal';
+@import 'components/buttons';
+@import 'components/toast';
 
-.page {
-	&__wrapper {
-		display: flex;
-		flex-direction: column;
-		min-height: 100%;
-		overflow: hidden;
-		.footer {
-			flex: 0 0 auto;
-		}
-	}
-	&__content {
-		flex: 1 0 auto;
-	}
-}
-
-/*Custom styles start*/
-
-.page__modal {
-	&.small {
-		.page__modal-container {
-			width: 500px;
-		}
-	}
-	&-container {
-		padding: $spacer $spacer * 2.5;
-	}
-	&-close {
-		margin-right: -$spacer * 1.5;
-	}
-}
-.presentation-wrapper {
-	color: map-get($colors, white);
-	position: relative;
-	overflow: hidden;
-	&-background {
-		@include background('../img/background.jpg');
-		position: absolute;
-		left: -1.25%;
-		top: -1.25%;
-		width: 102.5%;
-		height: 102.5%;
-	}
-	@include forIE {
-		.row {
-			width: 100%;
-		}
-	}
-	.page {
-		&__wrapper {
-			min-height: 100vh;
-		}
-		&__content {
-			display: flex;
-			flex-direction: column;
-		}
-	}
-	main {
-		display: flex;
-		flex-direction: column;
-		flex: 1 0 auto;
-		justify-content: center;
-	}
-	.header, .footer {
-		padding-top: $spacer;
-		padding-bottom: $spacer;
-	}
-	.header {
-		nav {
-			a {
-				@include transition;
-				font-weight: bold;
-				margin-right: $spacer;
-				&:hover {
-					color: get($colors, success);
-				}
-			}
-		}
-	}
-	.list {
-		@include font-size(22);
-
-		padding-top: $spacer / 2;
-		padding-bottom: $spacer / 2;
-	}
-	h1 {
-		@include font-size(32)
-	}
-	h2 {
-		@include font-size(28)
-	}
-	.image-holder {
-		position: relative;
-		display: block;
-		padding-top: 100%;
-		.v8-image {
-			position: absolute;
-			min-width: 100%;
-			min-height: 100%;
-			top: 0;
-			left: 0;
-		}
-	}
-	.github-link {
-		@include transition;
-		animation: 5s linear infinite jump;
-		display: block;
-		color: get($colors, info);
-		@include mediaToUp($lg) {
-			max-width: rem(200px);
-		}
-		@include mediaToDown($lg) {
-			max-width: rem(120px);
-			margin: 0 auto;
-		}
-		&:hover {
-			color: get($colors, white);
-			animation-play-state: paused;
-		}
-	}
-	.button {
-		@include transition;
-		padding: $spacer;
-		display: block;
-		color: inherit;
-		border: $border-width solid get($colors, white);
-		border-radius: $spacer;
-		width: 100%;
-		@include interaction('mouse') {
-			&:hover {
-				background-color: white;
-				color: black;
-			}
-		}
-
-		@include interaction('touch') {
-			&:active {
-				background-color: white;
-				color: black;
-			}
-		}
-	}
-}
-@keyframes jump {
-	0% {
-		transform: translateY(0);
-	}
-	25% {
-		transform: translateY(10%);
-	}
-	50% {
-		transform: translateY(0);
-	}
-	75% {
-		transform: translateY(-10%);
-	}
-	100% {
-		transform: translateY(0);
-	}
-}
+@import 'pages/home/intro';
 
 
-
-/*Custom styles end*/
-
-.debug-container {
-	.debug-close {
-		@include interaction('mouse') {
-			&:hover {
-				color: get($colors, danger);
-			}
-		}
-	}
-	&:after {
-		@include pseudo;
-		width: $spacer * 2;
-		height: $spacer * 2;
-		background-color: get($colors, white);
-		left: 50%;
-		transform: translate(-50%, -50%) rotate(45deg);
-		top: 100%;
-	}
-}
