modifyed class Page, modal

--- a/src/html/layout/main.pug
+++ b/src/html/layout/main.pug
@@ -25,6 +25,7 @@ html(lang='ru')
 				pageRootClass && `page--${pageRootClass}`
 			]
 			id=pageId || 'js-page-regular'
+			data-paths='{"images": "img"}'
 		)
 			div(class='page__wrapper' id='js-page-wrapper')
 				div(class='page__content')
