--- a/src/html/pages/ui.pug
+++ b/src/html/pages/ui.pug
@@ -60,7 +60,9 @@ block mainContent
 			buttonType: 'submit',
 			type: 'default',
 			content: 'Button default',
-			classes: 'border rounded px-4 py-2'
+			classes: 'border rounded px-4 py-2',
+			bsTarget: '#js-example-modal',
+			bsToggle: 'modal'
 		})
 
 		hr.my-4
